documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef long LONG;
typedef long * LPLONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

C41W32API ERRVAL __stdcall C41_HeapCheck(HCARD handleval);

C41W32API ERRVAL __stdcall C41_HeapClear(HCARD handleval);

C41W32API ERRVAL __stdcall C41_HeapWipe(HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitFilt(USHORT chanflag,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitHeap(USHORT heapsize,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitInt(USHORT intsize,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitMsg(USHORT msgcount,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitSch(USHORT chancount,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitSeq(USHORT seqsize,HCARD handleval);

C41W32API ERRVAL __stdcall C41_IntClear(HCARD handleval);

C41W32API ERRVAL __stdcall C41_INTDisable(HCARD handleval);

C41W32API ERRVAL __stdcall C41_INTEnable(HCARD handleval);

C41W32API ERRVAL __stdcall C41_INTEnableCond(HCARD handleval);

C41W32API ERRVAL __stdcall C41_IntInstall(LPVOID hEvent,HCARD handleval);

C41W32API ERRVAL __stdcall C41_IntUninstall(HCARD handleval);

C41W32API ERRVAL __stdcall C41_IntWipe(HCARD handleval);

C41W32API ERRVAL __stdcall C41_Invoke(HCARD handleval);

C41W32API ERRVAL __stdcall C41_Invokee(HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernBegin(LPVOID *vxdptr,LPCSTR cardname,ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval);

C41W32API ERRVAL __stdcall C41_KernEEPRdsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernEEPRdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernEEPWrsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernEEPWrW(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernEnd(LPVOID vxdptr);

C41W32API ERRVAL __stdcall C41_KernIntInstall(LPVOID hEvent,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernIntParam(ULONG clraddr,ULONG clrwidth,ULONG clrvalue,ULONG stataddr,ULONG statwidth,ULONG statvalue,ULONG statmask,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernIntUninstall(HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernIORdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernIOWrW(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernMEMFillW(USHORT value,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernMEMRdsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernMEMRdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernMEMWrsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernMEMWrW(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernQuick(BOOL flag,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernStatusEx(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);

C41W32API USHORT __stdcall C41_ListSetRcv(USHORT listaddr,INT msgnum,HCARD handleval);

C41W32API USHORT __stdcall C41_ListSetXmt(USHORT listaddr,INT channum,HCARD handleval);

C41W32API ULONG __stdcall C41_MakeLong(USHORT valh,USHORT vall);

C41W32API LPSTR __stdcall C41_MantToAscii(LPSTR buf,LONG mant,INT exp);

C41W32API ULONG __stdcall C41_Mask(ULONG dataval,USHORT cntval);

C41W32API VOID __stdcall C41_MaxMant(LPLONG mant,LPINT exp);

C41W32API VOID __stdcall C41_MemFill(USHORT value,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API VOID __stdcall C41_MemStrRd(LPUSHORT valueptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API VOID __stdcall C41_MemStrWr(LPUSHORT valueptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API USHORT __stdcall C41_MEMWINRdB(ULONG addrval,HCARD handleval);

C41W32API ULONG __stdcall C41_MEMWINRdL(ULONG addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_MEMWINRdW(ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_MEMWINWrB(USHORT value,ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_MEMWINWrL(ULONG value,ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_MEMWINWrW(USHORT value,ULONG addrval,HCARD handleval);