documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.CS

        [DllImport("C41W32.DLL", EntryPoint = "_C41_HeapCheck@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_HeapCheck(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HeapClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_HeapClear(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HeapWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_HeapWipe(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_InitFilt@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_InitFilt(UInt16 chanflag, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_InitHeap@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_InitHeap(UInt16 heapsize, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_InitInt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_InitInt(UInt16 intsize, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_InitMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_InitMsg(UInt16 msgcount, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_InitSch@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_InitSch(UInt16 chancount, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_InitSeq@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_InitSeq(UInt16 seqsize, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_IntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_IntClear(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_INTDisable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_INTDisable(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_INTEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_INTEnable(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_INTEnableCond@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_INTEnableCond(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_IntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_IntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_IntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_IntUninstall(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_IntWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_IntWipe(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Invoke@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_Invoke(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Invokee@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_Invokee(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernBegin@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        unsafe public static extern Int32 C41_KernBegin(IntPtr* vxdptr, ref string cardname, UInt32 memval, UInt16 ioval, UInt16 irqval, UInt16 drqval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernEEPRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernEEPRdsW(ref UInt16 bufptr, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernEEPRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernEEPRdW(ref UInt16 valueptr, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernEEPWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernEEPWrsW(ref UInt16 bufptr, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernEEPWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernEEPWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernEnd(IntPtr vxdptr);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernIntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernIntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernIntParam@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernIntParam(UInt32 clraddr, UInt32 clrwidth, UInt32 clrvalue, UInt32 stataddr, UInt32 statwidth, UInt32 statvalue, UInt32 statmask, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernIntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernIntUninstall(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernIORdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernIORdW(ref UInt16 valueptr, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernIOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernIOWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernMEMFillW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernMEMFillW(UInt16 value, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernMEMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernMEMRdsW(ref UInt16 bufptr, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernMEMRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernMEMRdW(ref UInt16 valueptr, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernMEMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernMEMWrsW(ref UInt16 bufptr, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernMEMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernMEMWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernQuick@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernQuick(Int32 flag, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_KernStatusEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_KernStatusEx(ref UInt32 valueptr, UInt32 typeval, UInt32 index, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ListSetRcv@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_ListSetRcv(UInt16 listaddr, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ListSetXmt@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_ListSetXmt(UInt16 listaddr, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MakeLong@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_MakeLong(UInt16 valh, UInt16 vall);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MantToAscii@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C41_MantToAscii(ref string buf, Int32 mant, Int32 exp);
        public static string C41_MantToAscii(ref string buf, Int32 mant, Int32 exp) { return Marshal.PtrToStringAnsi(_C41_MantToAscii(ref buf, mant, exp)); }
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Mask@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_Mask(UInt32 dataval, UInt16 cntval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MaxMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MaxMant(ref Int32 mant, ref Int32 exp);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MemFill@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MemFill(UInt16 value, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MemStrRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MemStrRd(ref UInt16 valueptr, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MemStrWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MemStrWr(ref UInt16 valueptr, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MEMWINRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_MEMWINRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MEMWINRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_MEMWINRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MEMWINRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_MEMWINRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MEMWINWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MEMWINWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MEMWINWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MEMWINWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MEMWINWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MEMWINWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
